--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@angular/material": "^7.1.1",
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
+    "@angular/pwa": "^0.11.4",
     "@angular/router": "~7.0.0",
+    "@angular/service-worker": "~7.0.0",
     "@clr/angular": "^1.0.1",
     "@clr/icons": "^1.0.1",
     "@clr/ui": "^1.0.1",
