Revert "add service worker for offline capability"
This reverts commit ef4dd3233c658e0b9bde905df38bdf22fbcb42e8.

--- a/angular.json
+++ b/angular.json
@@ -21,22 +21,9 @@
             "assets": [
               "projects/markdown-app/src/favicon.ico",
               "projects/markdown-app/src/assets",
-              {
-                "glob": "backend.php",
-                "input": "./",
-                "output": "./"
-              },
-              {
-                "glob": ".htaccess",
-                "input": "./",
-                "output": "./"
-              },
-              {
-                "glob": "**/*",
-                "input": "./data",
-                "output": "./data"
-              },
-              "projects/markdown-app/src/manifest.json"
+              { "glob": "backend.php", "input": "./", "output": "./" },
+              { "glob": ".htaccess", "input": "./", "output": "./" },
+              { "glob": "**/*", "input": "./data", "output": "./data" }
             ],
             "styles": [
               "node_modules/@clr/icons/clr-icons.min.css",
@@ -75,8 +62,7 @@
                   "maximumWarning": "2mb",
                   "maximumError": "5mb"
                 }
-              ],
-              "serviceWorker": true
+              ]
             }
           }
         },
@@ -110,8 +96,7 @@
             "scripts": [],
             "assets": [
               "projects/markdown-app/src/favicon.ico",
-              "projects/markdown-app/src/assets",
-              "projects/markdown-app/src/manifest.json"
+              "projects/markdown-app/src/assets"
             ]
           }
         },
