--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@clr/icons": "^1.0.1",
     "@clr/ui": "^1.0.1",
     "@webcomponents/custom-elements": "^1.0.0",
+    "aes-js": "^3.1.2",
     "core-js": "^2.5.4",
     "font-awesome": "^4.7.0",
     "highlightjs": "^9.12.0",
     "jquery": "^3.3.1",
+    "jssha": "^2.3.1",
     "ngx-clipboard": "^11.1.9",
     "ngx-file-drop": "^5.0.0",
     "rxjs": "~6.3.3",
