--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@webcomponents/custom-elements": "^1.0.0",
     "aes-js": "^3.1.2",
     "core-js": "^2.5.4",
+    "crypto-js": "^3.1.9-1",
     "font-awesome": "^4.7.0",
     "highlightjs": "^9.12.0",
     "jquery": "^3.3.1",
