--- a/package.json
+++ b/package.json
@@ -11,58 +11,54 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^7.0.4",
-    "@angular/cdk": "^7.1.1",
-    "@angular/common": "~7.0.0",
-    "@angular/compiler": "~7.0.0",
-    "@angular/core": "~7.0.0",
-    "@angular/forms": "~7.0.0",
-    "@angular/http": "~7.0.0",
-    "@angular/material": "^7.1.1",
-    "@angular/platform-browser": "~7.0.0",
-    "@angular/platform-browser-dynamic": "~7.0.0",
-    "@angular/router": "~7.0.0",
-    "@clr/angular": "^1.0.1",
-    "@clr/icons": "^1.0.1",
-    "@clr/ui": "^1.0.1",
-    "@webcomponents/custom-elements": "^1.0.0",
+    "@angular/animations": "~8.1.0",
+    "@angular/common": "~8.1.0",
+    "@angular/compiler": "~8.1.0",
+    "@angular/core": "~8.1.0",
+    "@angular/forms": "~8.1.0",
+    "@angular/platform-browser": "~8.1.0",
+    "@angular/platform-browser-dynamic": "~8.1.0",
+    "@angular/router": "~8.1.0",
+    "@webcomponents/custom-elements": "^1.2.4",
+    "rxjs": "~6.4.0",
+    "tslib": "^1.9.0",
+    "zone.js": "~0.9.1",
+    "@angular/cdk": "^8.0.2",
+    "@angular/http": "~7.2.15",
+    "@angular/material": "^8.0.2",
+    "@clr/angular": "^2.0.2",
+    "@clr/icons": "^2.0.2",
+    "@clr/ui": "^2.0.2",
     "aes-js": "^3.1.2",
-    "core-js": "^2.5.4",
     "crypto-js": "^3.1.9-1",
     "font-awesome": "^4.7.0",
     "highlightjs": "^9.12.0",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "jssha": "^2.3.1",
-    "ngx-clipboard": "^11.1.9",
-    "ngx-file-drop": "^5.0.0",
-    "rxjs": "~6.3.3",
+    "ngx-clipboard": "^12.2.0",
+    "ngx-file-drop": "^8.0.3",
     "showdown": "^1.9.0",
-    "simplemde": "^1.11.2",
-    "zone.js": "~0.8.26"
+    "simplemde": "^1.11.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.10.0",
-    "@angular-devkit/build-ng-packagr": "~0.10.0",
-    "@angular/cli": "~7.0.6",
-    "@angular/compiler-cli": "~7.0.0",
-    "@angular/language-service": "~7.0.0",
+    "@angular-devkit/build-angular": "~0.801.0",
+    "@angular/cli": "~8.1.0",
+    "@angular/compiler-cli": "~8.1.0",
+    "@angular/language-service": "~8.1.0",
     "@types/node": "~8.9.4",
-    "@types/jasmine": "~2.8.8",
+    "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "~4.5.0",
-    "jasmine-core": "~2.99.1",
+    "codelyzer": "^5.0.0",
+    "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~3.0.0",
+    "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~1.1.2",
-    "karma-jasmine-html-reporter": "^0.2.2",
-    "ng-packagr": "^4.2.0",
+    "karma-jasmine": "~2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
-    "tsickle": ">=0.29.0",
-    "tslib": "^1.9.0",
-    "tslint": "~5.11.0",
-    "typescript": "~3.1.6"
+    "tslint": "~5.15.0",
+    "typescript": "~3.4.3"
   }
 }
