--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markdownnotes",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --project=markdown-app --proxy-config proxy.conf.json",
@@ -11,54 +11,54 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.0",
-    "@angular/common": "~8.1.0",
-    "@angular/compiler": "~8.1.0",
-    "@angular/core": "~8.1.0",
-    "@angular/forms": "~8.1.0",
-    "@angular/platform-browser": "~8.1.0",
-    "@angular/platform-browser-dynamic": "~8.1.0",
-    "@angular/router": "~8.1.0",
-    "@webcomponents/custom-elements": "^1.2.4",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.9.1",
-    "@angular/cdk": "^8.0.2",
-    "@angular/http": "~7.2.15",
-    "@angular/material": "^8.0.2",
-    "@clr/angular": "^2.0.2",
-    "@clr/icons": "^2.0.2",
-    "@clr/ui": "^2.0.2",
+    "@angular/animations": "~9.1.1",
+    "@angular/cdk": "^9.1.1",
+    "@angular/common": "~9.1.1",
+    "@angular/compiler": "~9.1.1",
+    "@angular/core": "~9.1.1",
+    "@angular/forms": "~9.1.1",
+    "@angular/material": "^9.1.1",
+    "@angular/platform-browser": "~9.1.1",
+    "@angular/platform-browser-dynamic": "~9.1.1",
+    "@angular/router": "~9.1.1",
+    "@webcomponents/custom-elements": "~1.0.0",
+    "@clr/core": "^3.1.0",
+    "@clr/angular": "^3.1.0",
+    "@clr/icons": "^3.1.0",
+    "@clr/ui": "^3.1.0",
     "aes-js": "^3.1.2",
-    "crypto-js": "^3.1.9-1",
+    "crypto-js": "^3.3.0",
     "font-awesome": "^4.7.0",
-    "highlightjs": "^9.12.0",
-    "jquery": "^3.4.1",
-    "jssha": "^2.3.1",
-    "ngx-clipboard": "^12.2.0",
-    "ngx-file-drop": "^8.0.3",
-    "showdown": "^1.9.0",
-    "simplemde": "^1.11.2"
+    "highlight.js": "^9.18.1",
+    "jquery": "^3.5.0",
+    "jssha": "^2.4.2",
+    "ngx-clipboard": "^13.0.0",
+    "ngx-file-drop": "^9.0.1",
+    "rxjs": "~6.5.4",
+    "showdown": "^1.9.1",
+    "simplemde": "^1.11.2",
+    "tslib": "^1.11.1",
+    "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.0",
-    "@angular/cli": "~8.1.0",
-    "@angular/compiler-cli": "~8.1.0",
-    "@angular/language-service": "~8.1.0",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
-    "jasmine-core": "~3.4.0",
+    "@angular-devkit/build-angular": "~0.901.1",
+    "@angular/cli": "~9.1.1",
+    "@angular/compiler-cli": "~9.1.1",
+    "@angular/language-service": "~9.1.1",
+    "@types/jasmine": "~3.5.0",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^5.1.2",
+    "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
-    "karma": "~4.1.0",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
-    "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.4.3"
+    "karma": "~4.4.1",
+    "karma-chrome-launcher": "~3.1.0",
+    "karma-coverage-istanbul-reporter": "~2.1.0",
+    "karma-jasmine": "~3.0.1",
+    "karma-jasmine-html-reporter": "^1.5.3",
+    "protractor": "~5.4.3",
+    "ts-node": "~8.3.0",
+    "tslint": "~6.1.0",
+    "typescript": "~3.8.3"
   }
 }
