--- a/docker-dev/Dockerfile
+++ b/docker-dev/Dockerfile
@@ -1,10 +1,11 @@
-FROM php:7.2-apache
+FROM php:7.4.5-apache
 COPY php.ini /usr/local/etc/php/
 RUN apt-get update && apt-get install -y \
         libfreetype6-dev \
         libjpeg62-turbo-dev \
+        libmcrypt-dev \
         libpng-dev \
     && docker-php-ext-install -j$(nproc) iconv \
-    && docker-php-ext-configure gd --with-freetype-dir=/usr/include/ --with-jpeg-dir=/usr/include/ \
+    && docker-php-ext-configure gd --with-freetype --with-jpeg \
     && docker-php-ext-install -j$(nproc) gd
 RUN a2enmod rewrite
