* optimize fileslisting (sortable, default listing by date descending, filedelete) * optimize password store * import export password store * update libs

--- a/package.json
+++ b/package.json
@@ -11,43 +11,43 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~9.1.1",
-    "@angular/cdk": "^9.1.1",
-    "@angular/common": "~9.1.1",
-    "@angular/compiler": "~9.1.1",
-    "@angular/core": "~9.1.1",
-    "@angular/forms": "~9.1.1",
-    "@angular/material": "^9.1.1",
-    "@angular/platform-browser": "~9.1.1",
-    "@angular/platform-browser-dynamic": "~9.1.1",
-    "@angular/router": "~9.1.1",
+    "@angular/animations": "^9.1.11",
+    "@angular/cdk": "^9.2.4",
+    "@angular/common": "^9.1.11",
+    "@angular/compiler": "^9.1.11",
+    "@angular/core": "^9.1.11",
+    "@angular/forms": "^9.1.11",
+    "@angular/material": "^9.2.4",
+    "@angular/platform-browser": "^9.1.11",
+    "@angular/platform-browser-dynamic": "^9.1.11",
+    "@angular/router": "^9.1.11",
+    "@clr/angular": "^3.1.4",
+    "@clr/core": "^3.1.4",
+    "@clr/icons": "^3.1.4",
+    "@clr/ui": "^3.1.4",
     "@webcomponents/custom-elements": "~1.0.0",
-    "@clr/core": "^3.1.0",
-    "@clr/angular": "^3.1.0",
-    "@clr/icons": "^3.1.0",
-    "@clr/ui": "^3.1.0",
     "aes-js": "^3.1.2",
-    "crypto-js": "^3.3.0",
+    "crypto-js": "^4.0.0",
     "font-awesome": "^4.7.0",
     "highlight.js": "^9.18.1",
-    "jquery": "^3.5.0",
+    "jquery": "^3.5.1",
     "jssha": "^2.4.2",
-    "ngx-clipboard": "^13.0.0",
+    "ngx-clipboard": "^13.0.1",
     "ngx-file-drop": "^9.0.1",
     "rxjs": "~6.5.4",
     "showdown": "^1.9.1",
     "simplemde": "^1.11.2",
-    "tslib": "^1.11.1",
+    "tslib": "^1.13.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.901.1",
-    "@angular/cli": "~9.1.1",
-    "@angular/compiler-cli": "~9.1.1",
-    "@angular/language-service": "~9.1.1",
-    "@types/jasmine": "~3.5.0",
+    "@angular-devkit/build-angular": "^0.901.10",
+    "@angular/cli": "^9.1.10",
+    "@angular/compiler-cli": "^9.1.11",
+    "@angular/language-service": "^9.1.11",
+    "@types/jasmine": "^3.5.11",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.11.1",
+    "@types/node": "^12.12.47",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~4.2.1",
@@ -55,10 +55,10 @@
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
     "karma-jasmine": "~3.0.1",
-    "karma-jasmine-html-reporter": "^1.5.3",
+    "karma-jasmine-html-reporter": "^1.5.4",
     "protractor": "~5.4.3",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
+    "tslint": "^6.1.2",
     "typescript": "~3.8.3"
   }
 }
