--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,26 +1,23 @@
+/*
+  This is a "Solution Style" tsconfig.json file, and is used by editors and TypeScript’s language server to improve development experience.
+  It is not intended to be used to perform a compilation.
+
+  To learn more about this file see: https://angular.io/config/solution-tsconfig.
+*/
 {
-  "compileOnSave": false,
-  "compilerOptions": {
-    "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
-    "sourceMap": true,
-    "declaration": false,
-    "module": "es2015",
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
-    ],
-    "lib": [
-      "es2018",
-      "dom"
-    ],
-    "paths": {
-      "markdown-lib": [
-        "projects/markdown-lib/src/public_api.ts"
-      ]
+  "files": [],
+  "references": [
+    {
+      "path": "./projects/markdown-app/tsconfig.app.json"
+    },
+    {
+      "path": "./projects/markdown-app/tsconfig.spec.json"
+    },
+    {
+      "path": "./projects/markdown-lib/tsconfig.lib.json"
+    },
+    {
+      "path": "./projects/markdown-lib/tsconfig.spec.json"
     }
-  }
+  ]
 }
