--- a/package.json
+++ b/package.json
@@ -11,44 +11,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.3",
-    "@angular/cdk": "^10.0.1",
-    "@angular/common": "^10.0.3",
-    "@angular/compiler": "^10.0.3",
-    "@angular/core": "^10.0.3",
-    "@angular/forms": "^10.0.3",
-    "@angular/material": "^10.0.1",
-    "@angular/platform-browser": "^10.0.3",
-    "@angular/platform-browser-dynamic": "^10.0.3",
-    "@angular/router": "^10.0.3",
+    "@angular/animations": "^10.2.3",
+    "@angular/cdk": "^10.2.7",
+    "@angular/common": "^10.2.3",
+    "@angular/compiler": "^10.2.3",
+    "@angular/core": "^10.2.3",
+    "@angular/forms": "^10.2.3",
+    "@angular/material": "^10.2.7",
+    "@angular/platform-browser": "^10.2.3",
+    "@angular/platform-browser-dynamic": "^10.2.3",
+    "@angular/router": "^10.2.3",
     "@clr/angular": "^4.0.8",
-    "@clr/core": "^3.1.4",
+    "@clr/core": "^4.0.8",
     "@clr/icons": "^4.0.8",
     "@clr/ui": "^4.0.8",
     "@webcomponents/custom-elements": "~1.0.0",
     "aes-js": "^3.1.2",
     "crypto-js": "^4.0.0",
     "font-awesome": "^4.7.0",
-    "highlight.js": "^9.18.1",
+    "highlight.js": "^9.18.5",
     "jquery": "^3.5.1",
     "jssha": "^2.4.2",
-    "ngx-clipboard": "^13.0.1",
-    "ngx-file-drop": "^9.0.1",
-    "rxjs": "~6.6.0",
+    "ngx-clipboard": "^14.0.1",
+    "ngx-file-drop": "^10.1.1",
+    "rxjs": "^6.6.3",
     "showdown": "^1.9.1",
     "simplemde": "^1.11.2",
-    "tslib": "^2.0.0",
+    "tslib": "^2.0.3",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.2",
-    "@angular/cli": "^10.0.2",
-    "@angular/compiler-cli": "^10.0.3",
-    "@angular/language-service": "^10.0.3",
-    "@types/jasmine": "^3.5.11",
+    "@angular-devkit/build-angular": "^0.1000.8",
+    "@angular/cli": "^10.2.0",
+    "@angular/compiler-cli": "^10.2.3",
+    "@angular/language-service": "^10.2.3",
+    "@types/jasmine": "^3.6.2",
     "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.12.50",
-    "codelyzer": "^6.0.0",
+    "@types/node": "^12.19.9",
+    "codelyzer": "^6.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~5.0.0",
@@ -58,7 +58,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "~3.9.6"
+    "tslint": "^6.1.3",
+    "typescript": "^3.9.7"
   }
 }
