--- a/package.json
+++ b/package.json
@@ -11,16 +11,16 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.2.3",
-    "@angular/cdk": "^10.2.7",
-    "@angular/common": "^10.2.3",
-    "@angular/compiler": "^10.2.3",
-    "@angular/core": "^10.2.3",
-    "@angular/forms": "^10.2.3",
-    "@angular/material": "^10.2.7",
-    "@angular/platform-browser": "^10.2.3",
-    "@angular/platform-browser-dynamic": "^10.2.3",
-    "@angular/router": "^10.2.3",
+    "@angular/animations": "^11.0.4",
+    "@angular/cdk": "^11.0.3",
+    "@angular/common": "^11.0.4",
+    "@angular/compiler": "^11.0.4",
+    "@angular/core": "^11.0.4",
+    "@angular/forms": "^11.0.4",
+    "@angular/material": "^11.0.3",
+    "@angular/platform-browser": "^11.0.4",
+    "@angular/platform-browser-dynamic": "^11.0.4",
+    "@angular/router": "^11.0.4",
     "@clr/angular": "^4.0.8",
     "@clr/core": "^4.0.8",
     "@clr/icons": "^4.0.8",
@@ -29,7 +29,7 @@
     "aes-js": "^3.1.2",
     "crypto-js": "^4.0.0",
     "font-awesome": "^4.7.0",
-    "highlight.js": "^9.18.5",
+    "highlight.js": "^10.4.1",
     "jquery": "^3.5.1",
     "jssha": "^2.4.2",
     "ngx-clipboard": "^14.0.1",
@@ -37,28 +37,26 @@
     "rxjs": "^6.6.3",
     "showdown": "^1.9.1",
     "simplemde": "^1.11.2",
-    "tslib": "^2.0.3",
+    "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.8",
-    "@angular/cli": "^10.2.0",
-    "@angular/compiler-cli": "^10.2.3",
-    "@angular/language-service": "^10.2.3",
-    "@types/jasmine": "^3.6.2",
-    "@types/jasminewd2": "^2.0.8",
-    "@types/node": "^12.19.9",
-    "codelyzer": "^6.0.1",
-    "jasmine-core": "~3.5.0",
+    "@angular-devkit/build-angular": "~0.1100.4",
+    "@angular/cli": "~11.0.4",
+    "@angular/compiler-cli": "~11.0.4",
+    "@types/jasmine": "~3.6.0",
+    "@types/node": "^12.11.1",
+    "codelyzer": "^6.0.0",
+    "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~5.1.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~3.3.0",
+    "karma-coverage": "~2.0.3",
+    "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "^6.1.3",
-    "typescript": "^3.9.7"
+    "tslint": "~6.1.0",
+    "typescript": "4.0.2"
   }
 }
