--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "markdownnotes",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "scripts": {
     "ng": "ng",
     "start": "ng serve --project=markdown-app --proxy-config proxy.conf.json",
@@ -11,52 +11,62 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^11.0.4",
-    "@angular/cdk": "^11.0.3",
-    "@angular/common": "^11.0.4",
-    "@angular/compiler": "^11.0.4",
-    "@angular/core": "^11.0.4",
-    "@angular/forms": "^11.0.4",
-    "@angular/material": "^11.0.3",
-    "@angular/platform-browser": "^11.0.4",
-    "@angular/platform-browser-dynamic": "^11.0.4",
-    "@angular/router": "^11.0.4",
-    "@clr/angular": "^4.0.8",
-    "@clr/core": "^4.0.8",
-    "@clr/icons": "^4.0.8",
-    "@clr/ui": "^4.0.8",
-    "@webcomponents/custom-elements": "~1.0.0",
+    "@angular/animations": "^12.1.4",
+    "@angular/cdk": "^12.1.4",
+    "@angular/common": "^12.1.4",
+    "@angular/compiler": "^12.1.4",
+    "@angular/core": "^12.1.4",
+    "@angular/forms": "^12.1.4",
+    "@angular/material": "^12.1.4",
+    "@angular/platform-browser": "^12.1.4",
+    "@angular/platform-browser-dynamic": "^12.1.4",
+    "@angular/router": "^12.1.4",
+    "@cds/core": "^5.5.7",
+    "@clr/angular": "^12.0.5",
+    "@clr/icons": "^12.0.5",
+    "@clr/ui": "^12.0.5",
+    "@webcomponents/custom-elements": "~1.5.0",
     "aes-js": "^3.1.2",
-    "crypto-js": "^4.0.0",
+    "crypto-js": "^4.1.1",
     "font-awesome": "^4.7.0",
-    "highlight.js": "^10.4.1",
-    "jquery": "^3.5.1",
-    "jssha": "^2.4.2",
+    "highlight.js": "^11.2.0",
+    "jquery": "^3.6.0",
+    "jssha": "^3.2.0",
     "ngx-clipboard": "^14.0.1",
-    "ngx-file-drop": "^10.1.1",
-    "rxjs": "^6.6.3",
+    "ngx-file-drop": "^11.2.0",
+    "rxjs": "^7.4.0",
     "showdown": "^1.9.1",
     "simplemde": "^1.11.2",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.4",
-    "@angular/cli": "~11.0.4",
-    "@angular/compiler-cli": "~11.0.4",
-    "@types/jasmine": "~3.6.0",
-    "@types/node": "^12.11.1",
-    "codelyzer": "^6.0.0",
-    "jasmine-core": "~3.6.0",
+    "@angular-devkit/build-angular": "^12.1.4",
+    "@angular-eslint/builder": "^12.3.1",
+    "@angular-eslint/eslint-plugin": "^12.3.1",
+    "@angular-eslint/eslint-plugin-template": "^12.3.1",
+    "@angular-eslint/schematics": "12.3.1",
+    "@angular-eslint/template-parser": "^12.3.1",
+    "@angular/cli": "^12.1.4",
+    "@angular/compiler-cli": "^12.1.4",
+    "@types/jasmine": "~3.8.0",
+    "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.19.9",
+    "@typescript-eslint/eslint-plugin": "4.16.1",
+    "@typescript-eslint/parser": "4.16.1",
+    "eslint": "^7.6.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jsdoc": "30.7.6",
+    "eslint-plugin-prefer-arrow": "1.2.2",
+    "jasmine-core": "~3.8.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.0",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage": "~2.0.3",
+    "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
-    "typescript": "4.0.2"
+    "typescript": "~4.3.5"
   }
 }
