--- a/docker-dev/Dockerfile
+++ b/docker-dev/Dockerfile
@@ -1,11 +1,11 @@
 FROM php:8.2.1-apache
 COPY php.ini /usr/local/etc/php/
-RUN apt-get update && apt-get install -y \
-        libfreetype6-dev \
-        libjpeg62-turbo-dev \
-        libmcrypt-dev \
-        libpng-dev \
-    && docker-php-ext-install -j$(nproc) iconv \
-    && docker-php-ext-configure gd --with-freetype --with-jpeg \
-    && docker-php-ext-install -j$(nproc) gd
+RUN apt-get update 
+#RUN apt-get install -y libfreetype6-dev
+#RUN apt-get install -y libjpeg62-turbo-dev
+#RUN apt-get install -y libmcrypt-dev
+#RUN apt-get install -y libpng-dev
+#RUN docker-php-ext-install -j$(nproc) iconv
+#RUN docker-php-ext-configure gd --with-freetype --with-jpeg
+#RUN docker-php-ext-install -j$(nproc) gd
 RUN a2enmod rewrite
