--- a/angular.json
+++ b/angular.json
@@ -1,170 +1,113 @@
 {
-  "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
-  "version": 1,
-  "newProjectRoot": "projects",
-  "projects": {
-    "markdown-app": {
-      "root": "projects/markdown-app/",
-      "sourceRoot": "projects/markdown-app/src",
-      "projectType": "application",
-      "prefix": "app",
-      "schematics": {},
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:browser",
-          "options": {
-            "outputPath": "dist",
-            "index": "projects/markdown-app/src/index.html",
-            "main": "projects/markdown-app/src/main.ts",
-            "polyfills": "projects/markdown-app/src/polyfills.ts",
-            "tsConfig": "projects/markdown-app/tsconfig.app.json",
-            "assets": [
-              "projects/markdown-app/src/favicon.ico",
-              "projects/markdown-app/src/assets",
-              { "glob": "backend.php", "input": "./", "output": "./" },
-              { "glob": ".htaccess", "input": "./", "output": "./" },
-              { "glob": "**/*", "input": "./data", "output": "./data" }
-            ],
-            "styles": [
-              "node_modules/@clr/icons/clr-icons.min.css",
-              "node_modules/@clr/ui/clr-ui.min.css",
-              "projects/markdown-app/src/styles.css",
-              "node_modules/simplemde/dist/simplemde.min.css",
-              "node_modules/highlight.js/styles/atom-one-light.css",
-              "node_modules/font-awesome/css/font-awesome.min.css"
-            ],
-            "scripts": [
-              "node_modules/@webcomponents/custom-elements/custom-elements.min.js",
-              "node_modules/@clr/icons/clr-icons.min.js",
-              "node_modules/jquery/dist/jquery.min.js"
-            ]
-          },
-          "configurations": {
-            "production": {
-              "fileReplacements": [
-                {
-                  "replace": "projects/markdown-app/src/environments/environment.ts",
-                  "with": "projects/markdown-app/src/environments/environment.prod.ts"
-                }
+    "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
+    "version": 1,
+    "newProjectRoot": "projects",
+    "projects": {
+      "app": {
+        "projectType": "application",
+        "schematics": {},
+        "root": "",
+        "sourceRoot": "src",
+        "prefix": "app",
+        "architect": {
+          "build": {
+            "builder": "@angular-devkit/build-angular:browser",
+            "options": {
+              "outputPath": "dist/app",
+              "index": "src/index.html",
+              "main": "src/main.ts",
+              "polyfills": "src/polyfills.ts",
+              "tsConfig": "tsconfig.app.json",
+              "assets": [
+                "src/favicon.ico",
+                "src/assets",
+                { "glob": "backend.php", "input": "./", "output": "./" },
+                { "glob": ".htaccess", "input": "./", "output": "./" },
+                { "glob": "**/*", "input": "./data", "output": "./data" }
               ],
-              "optimization": { 
-                "scripts": true, 
-                "fonts": { "inline": true }, 
-                "styles": { "minify": true, "inlineCritical": false } 
-              },
-              "outputHashing": "all",
-              "sourceMap": false,
-              "namedChunks": false,
-              "aot": true,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
-              "budgets": [
-                {
-                  "type": "initial",
-                  "maximumWarning": "2mb",
-                  "maximumError": "5mb"
-                }
+              "styles": [
+                "src/styles.css",
+                "node_modules/@clr/ui/clr-ui.min.css",
+                "node_modules/easymde/dist/easymde.min.css",
+                "node_modules/highlight.js/styles/atom-one-light.css",
+                "node_modules/@clr/icons/clr-icons.min.css",
+                "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
+              ],
+              "scripts": [
+                "node_modules/jquery/dist/jquery.min.js",
+                "node_modules/@webcomponents/custom-elements/custom-elements.min.js",
+                "node_modules/@clr/icons/clr-icons.min.js"
               ]
             },
-            "development": {
-              "buildOptimizer": false,
-              "optimization": false,
-              "vendorChunk": true,
-              "extractLicenses": false,
-              "sourceMap": true,
-              "namedChunks": true
-            }
-          },
-          "defaultConfiguration": "production"
-        },
-        "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "browserTarget": "markdown-app:build"
-          },
-          "configurations": {
-            "production": {
-              "browserTarget": "markdown-app:build:production"
+            "configurations": {
+              "production": {
+                "budgets": [
+                  {
+                    "type": "initial",
+                    "maximumWarning": "2mb",
+                    "maximumError": "5mb"
+                  },
+                  {
+                    "type": "anyComponentStyle",
+                    "maximumWarning": "2kb",
+                    "maximumError": "4kb"
+                  }
+                ],
+                "fileReplacements": [
+                  {
+                    "replace": "src/environments/environment.ts",
+                    "with": "src/environments/environment.prod.ts"
+                  }
+                ],
+                "outputHashing": "all"
+              },
+              "development": {
+                "buildOptimizer": false,
+                "optimization": false,
+                "vendorChunk": true,
+                "extractLicenses": false,
+                "sourceMap": true,
+                "namedChunks": true
+              }
             },
-            "development": {
-              "browserTarget": "markdown-app:build:development"
+            "defaultConfiguration": "production"
+          },
+          "serve": {
+            "builder": "@angular-devkit/build-angular:dev-server",
+            "configurations": {
+              "production": {
+                "browserTarget": "app:build:production"
+              },
+              "development": {
+                "browserTarget": "app:build:development"
+              }
+            },
+            "defaultConfiguration": "development"
+          },
+          "extract-i18n": {
+            "builder": "@angular-devkit/build-angular:extract-i18n",
+            "options": {
+              "browserTarget": "app:build"
             }
           },
-          "defaultConfiguration": "development"
-        },
-        "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "browserTarget": "markdown-app:build"
-          }
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "projects/markdown-app/src/test.ts",
-            "polyfills": "projects/markdown-app/src/polyfills.ts",
-            "tsConfig": "projects/markdown-app/tsconfig.spec.json",
-            "karmaConfig": "projects/markdown-app/karma.conf.js",
-            "styles": [
-              "projects/markdown-app/src/styles.css"
-            ],
-            "scripts": [],
-            "assets": [
-              "projects/markdown-app/src/favicon.ico",
-              "projects/markdown-app/src/assets"
-            ]
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "projects/markdown-app/tsconfig.app.json",
-              "projects/markdown-app/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
-          }
-        }
-      }
-    },
-    "markdown-lib": {
-      "root": "projects/markdown-lib",
-      "sourceRoot": "projects/markdown-lib/src",
-      "projectType": "library",
-      "prefix": "lib",
-      "architect": {
-        "build": {
-          "builder": "@angular-devkit/build-angular:ng-packagr",
-          "options": {
-            "tsConfig": "projects/markdown-lib/tsconfig.lib.json",
-            "project": "projects/markdown-lib/ng-package.json"
-          },
-        },
-        "test": {
-          "builder": "@angular-devkit/build-angular:karma",
-          "options": {
-            "main": "projects/markdown-lib/src/test.ts",
-            "tsConfig": "projects/markdown-lib/tsconfig.spec.json",
-            "karmaConfig": "projects/markdown-lib/karma.conf.js"
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "projects/markdown-lib/tsconfig.lib.json",
-              "projects/markdown-lib/tsconfig.spec.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
-            ]
+          "test": {
+            "builder": "@angular-devkit/build-angular:karma",
+            "options": {
+              "main": "src/test.ts",
+              "polyfills": "src/polyfills.ts",
+              "tsConfig": "tsconfig.spec.json",
+              "karmaConfig": "karma.conf.js",
+              "assets": [
+                "src/favicon.ico",
+                "src/assets"
+              ],
+              "styles": [
+                "src/styles.css"
+              ],
+              "scripts": []
+            }
           }
         }
       }
     }
-  },
-  "defaultProject": "markdown-app"
-}
+  }
