--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.4.0",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --project=markdown-app --proxy-config proxy.conf.json",
+    "start": "ng serve --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -11,62 +11,44 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.1.4",
-    "@angular/cdk": "^12.1.4",
-    "@angular/common": "^12.1.4",
-    "@angular/compiler": "^12.1.4",
-    "@angular/core": "^12.1.4",
-    "@angular/forms": "^12.1.4",
-    "@angular/material": "^12.1.4",
-    "@angular/platform-browser": "^12.1.4",
-    "@angular/platform-browser-dynamic": "^12.1.4",
-    "@angular/router": "^12.1.4",
-    "@cds/core": "^5.5.7",
-    "@clr/angular": "^12.0.5",
-    "@clr/icons": "^12.0.5",
-    "@clr/ui": "^12.0.5",
-    "@webcomponents/custom-elements": "~1.5.0",
+    "@angular/animations": "^14.2.0",
+    "@angular/common": "^14.2.0",
+    "@angular/compiler": "^14.2.0",
+    "@angular/core": "^14.2.0",
+    "@angular/forms": "^14.2.0",
+    "@angular/platform-browser": "^14.2.0",
+    "@angular/platform-browser-dynamic": "^14.2.0",
+    "@angular/router": "^14.2.0",
+    "@cds/core": "^6.2.3",
+    "@clr/angular": "^13.11.1",
+    "@clr/icons": "^13.0.2",
+    "@clr/ui": "^13.11.1",
+    "@fortawesome/fontawesome-free": "^6.2.1",
+    "@webcomponents/custom-elements": "^1.5.1",
     "aes-js": "^3.1.2",
     "crypto-js": "^4.1.1",
-    "font-awesome": "^4.7.0",
-    "highlight.js": "^11.2.0",
-    "jquery": "^3.6.0",
-    "jssha": "^3.2.0",
-    "ngx-clipboard": "^14.0.1",
-    "ngx-file-drop": "^11.2.0",
-    "rxjs": "^7.4.0",
-    "showdown": "^1.9.1",
-    "simplemde": "^1.11.2",
-    "tslib": "^2.0.0",
+    "easymde": "^2.18.0",
+    "highlight.js": "^11.7.0",
+    "jquery": "^3.6.3",
+    "jssha": "^3.3.0",
+    "ngx-clipboard": "^15.1.0",
+    "ngx-file-drop": "^14.0.2",
+    "rxjs": "~7.5.0",
+    "showdown": "^2.1.0",
+    "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^12.1.4",
-    "@angular-eslint/builder": "^12.3.1",
-    "@angular-eslint/eslint-plugin": "^12.3.1",
-    "@angular-eslint/eslint-plugin-template": "^12.3.1",
-    "@angular-eslint/schematics": "12.3.1",
-    "@angular-eslint/template-parser": "^12.3.1",
-    "@angular/cli": "^12.1.4",
-    "@angular/compiler-cli": "^12.1.4",
-    "@types/jasmine": "~3.8.0",
-    "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.19.9",
-    "@typescript-eslint/eslint-plugin": "4.16.1",
-    "@typescript-eslint/parser": "4.16.1",
-    "eslint": "^7.6.0",
-    "eslint-plugin-import": "2.22.1",
-    "eslint-plugin-jsdoc": "30.7.6",
-    "eslint-plugin-prefer-arrow": "1.2.2",
-    "jasmine-core": "~3.8.0",
-    "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~6.3.4",
+    "@angular-devkit/build-angular": "^14.2.10",
+    "@angular/cli": "~14.2.10",
+    "@angular/compiler-cli": "^14.2.0",
+    "@types/jasmine": "~4.0.0",
+    "jasmine-core": "~4.3.0",
+    "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.1.0",
-    "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.0",
-    "karma-jasmine-html-reporter": "^1.5.0",
-    "protractor": "~7.0.0",
-    "ts-node": "~8.3.0",
-    "typescript": "~4.3.5"
+    "karma-coverage": "~2.2.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "~2.0.0",
+    "typescript": "~4.7.2"
   }
 }
