--- a/angular.json
+++ b/angular.json
@@ -30,13 +30,11 @@
                 "node_modules/@clr/ui/clr-ui.min.css",
                 "node_modules/easymde/dist/easymde.min.css",
                 "node_modules/highlight.js/styles/atom-one-light.css",
-                "node_modules/@clr/icons/clr-icons.min.css",
                 "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
               ],
               "scripts": [
                 "node_modules/jquery/dist/jquery.min.js",
-                "node_modules/@webcomponents/custom-elements/custom-elements.min.js",
-                "node_modules/@clr/icons/clr-icons.min.js"
+                "node_modules/@webcomponents/custom-elements/custom-elements.min.js"
               ]
             },
             "configurations": {
