--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^14.2.0",
     "@angular/platform-browser-dynamic": "^14.2.0",
     "@angular/router": "^14.2.0",
+    "@cds/angular": "^6.2.3",
     "@cds/core": "^6.2.3",
     "@clr/angular": "^13.11.1",
     "@clr/ui": "^13.11.1",
