--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "highlight.js": "^11.7.0",
     "jquery": "^3.6.3",
     "jssha": "^3.3.0",
+    "moment": "^2.29.4",
     "ngx-clipboard": "^15.1.0",
     "ngx-file-drop": "^14.0.2",
     "rxjs": "~7.5.0",
