--- a/angular.json
+++ b/angular.json
@@ -78,7 +78,8 @@
                 "browserTarget": "app:build:production"
               },
               "development": {
-                "browserTarget": "app:build:development"
+                "browserTarget": "app:build:development",
+                "proxyConfig": "proxy.conf.json"
               }
             },
             "defaultConfiguration": "development"
