--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,8 @@
               ],
               "styles": [
                 "src/styles.css",
+                "node_modules/@cds/core/global.min.css",
+                "node_modules/@cds/core/styles/theme.dark.min.css",
                 "node_modules/@clr/ui/clr-ui.min.css",
                 "node_modules/easymde/dist/easymde.min.css",
                 "node_modules/highlight.js/styles/atom-one-light.css",
@@ -75,10 +77,10 @@
             "builder": "@angular-devkit/build-angular:dev-server",
             "configurations": {
               "production": {
-                "browserTarget": "app:build:production"
+                "buildTarget": "app:build:production"
               },
               "development": {
-                "browserTarget": "app:build:development"
+                "buildTarget": "app:build:development"
               }
             },
             "defaultConfiguration": "development"
@@ -86,7 +88,7 @@
           "extract-i18n": {
             "builder": "@angular-devkit/build-angular:extract-i18n",
             "options": {
-              "browserTarget": "app:build"
+              "buildTarget": "app:build"
             }
           },
           "test": {
