--- a/package.json
+++ b/package.json
@@ -11,38 +11,39 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^17.3.11",
-    "@angular/common": "^17.3.11",
-    "@angular/compiler": "^17.3.11",
-    "@angular/core": "^17.3.11",
-    "@angular/forms": "^17.3.11",
-    "@angular/platform-browser": "^17.3.11",
-    "@angular/platform-browser-dynamic": "^17.3.11",
-    "@angular/router": "^17.3.11",
-    "@cds/angular": "^6.12.0",
-    "@cds/core": "^6.12.0",
-    "@clr/angular": "^17.2.1",
+    "@angular/animations": "^19.2.14",
+    "@angular/common": "^19.2.14",
+    "@angular/compiler": "^19.2.14",
+    "@angular/core": "^19.2.14",
+    "@angular/forms": "^19.2.14",
+    "@angular/platform-browser": "^19.2.14",
+    "@angular/platform-browser-dynamic": "^19.2.14",
+    "@angular/router": "^19.2.14",
+    "@cds/angular": "^6.15.1",
+    "@cds/core": "^6.15.1",
+    "@clr/angular": "^17.10.0",
+    "@clr/ui": "^17.10.0",
     "@fortawesome/fontawesome-free": "^6.2.1",
     "@webcomponents/custom-elements": "^1.5.1",
     "aes-js": "^3.1.2",
     "crypto-js": "^4.2.0",
-    "easymde": "^2.18.0",
-    "highlight.js": "^11.9.0",
+    "easymde": "^2.20.0",
+    "highlight.js": "^11.11.1",
     "jquery": "^3.7.1",
     "jssha": "^3.3.1",
-    "moment": "^2.30.1",
+    "luxon": "^3.6.1",
     "ng-circle-progress": "^1.7.1",
     "ngx-clipboard": "^16.0.0",
     "ngx-file-drop": "^16.0.0",
     "rxjs": "~7.8.1",
     "showdown": "^2.1.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.14.7"
+    "zone.js": "~0.15.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^17.3.8",
-    "@angular/cli": "~17.3.8",
-    "@angular/compiler-cli": "^17.3.11",
-    "typescript": "~5.4.5"
+    "@angular-devkit/build-angular": "^19.2.14",
+    "@angular/cli": "~19.2.14",
+    "@angular/compiler-cli": "^19.2.14",
+    "typescript": "~5.8.3"
   }
 }
