--- a/angular.json
+++ b/angular.json
@@ -11,12 +11,15 @@
         "prefix": "app",
         "architect": {
           "build": {
-            "builder": "@angular-devkit/build-angular:browser",
+            "builder": "@angular-devkit/build-angular:application",
             "options": {
-              "outputPath": "dist",
+              "outputPath": {
+                "base": "dist"
+              },
               "index": "src/index.html",
-              "main": "src/main.ts",
-              "polyfills": "src/polyfills.ts",
+              "polyfills": [
+                "src/polyfills.ts"
+              ],
               "tsConfig": "tsconfig.app.json",
               "assets": [
                 "src/favicon.ico",
@@ -38,7 +41,8 @@
               "scripts": [
                 "node_modules/jquery/dist/jquery.min.js",
                 "node_modules/@webcomponents/custom-elements/custom-elements.min.js"
-              ]
+              ],
+              "browser": "src/main.ts"
             },
             "configurations": {
               "production": {
@@ -63,9 +67,7 @@
                 "outputHashing": "all"
               },
               "development": {
-                "buildOptimizer": false,
                 "optimization": false,
-                "vendorChunk": true,
                 "extractLicenses": false,
                 "sourceMap": true,
                 "namedChunks": true
