replace showdown with ngx-markdown

--- a/package.json
+++ b/package.json
@@ -27,13 +27,13 @@
     "@webcomponents/custom-elements": "^1.5.1",
     "easymde": "^2.20.0",
     "highlight.js": "^11.11.1",
-    "jquery": "^3.7.1",
     "luxon": "^3.6.1",
+    "marked": "^15.0.12",
     "ng-circle-progress": "^1.7.1",
     "ngx-clipboard": "^16.0.0",
     "ngx-file-drop": "^16.0.0",
+    "ngx-markdown": "^19.0.0",
     "rxjs": "~7.8.1",
-    "showdown": "^2.1.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.1"
   },
