--- a/angular.json
+++ b/angular.json
@@ -28,6 +28,7 @@
                 { "glob": "backend_email.php", "input": "./", "output": "./" },
                 { "glob": "backend_pages.php", "input": "./", "output": "./" },
                 { "glob": "backend_vocabulary.php", "input": "./", "output": "./" },
+                { "glob": "backend_news.php", "input": "./", "output": "./" },
                 { "glob": "config.php", "input": "./", "output": "./" },
                 { "glob": "**/*", "input": "./vendor", "output": "./vendor" },
                 { "glob": ".htaccess", "input": "./", "output": "./" },
