--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@cds/core": "^6.15.1",
     "@clr/angular": "^17.10.0",
     "@clr/ui": "^17.10.0",
+    "@tailwindcss/postcss": "^4.1.16",
     "@types/dompurify": "^3.0.5",
     "@webcomponents/custom-elements": "^1.5.1",
     "dompurify": "^3.2.7",
@@ -38,7 +39,9 @@
     "ngx-cookie-service": "^19.1.2",
     "ngx-file-drop": "^16.0.0",
     "ngx-markdown": "^19.0.0",
+    "postcss": "^8.5.6",
     "rxjs": "~7.8.1",
+    "tailwindcss": "^4.1.16",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.1"
   },
