--- a/angular.json
+++ b/angular.json
@@ -119,6 +119,9 @@
       }
     },
     "cli": {
-      "analytics": false
+      "analytics": false,
+      "cache": {
+        "enabled": false
+      }
     }
   }
